# Spoverlay

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  spoverlay.spec
assets/: style.qss
overlay/: app.py
overlay/core/: config.py  hotkey_manager.py  hotkey_recorder.py  ipc_listener.py  models.py  spotify_client.py  state.py
overlay/ui/: configure_window.py  overlay_window.py  setup_window.py  tray_icon.py
